--- a/project/bookkeeping/templates/bookkeeping/includes/spending.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/spending.html
@@ -11,11 +11,12 @@
     <tbody>
         {% for row in spending_table %}
         {% with row.day|negative as neg %}
-        <tr {% if day|slugify == row.date|date:'j' %}class="bg-warning" {% endif %}>
-            {% with row.date|date:'w' as weekend %}<td class="text-left {% if weekend == '0' or weekend == '6' %}_weekend{% endif %}">{{ row.date|date:'l' }}</td>{% endwith %}
+        <tr {% if day|slugify == row.date|date:'j' %}class="_current_day"{% endif %}>
+            {% with row.date|date:'w' as weekend %}
+            <td class="text-left {% if weekend == '0' or weekend == '6' %}_weekend{% endif %}">{{ row.date|date:'l' }}</td>{% endwith %}
             {% cell row.day css_class=row.day|negative %}{% cell row.full css_class=row.full|negative|add:' -full' %}
-        </tr>
-        {% endwith %}{% endfor %}
+        </tr>{% endwith %}
+        {% endfor %}
     </tbody>
 </table>
 <style>
@@ -26,8 +27,5 @@
     .table-danger.-full {
         background-color: #fe536a;
         font-weight: bold;
-    }
-    ._weekend {
-        background-color: lightsalmon;
     }
 </style>
