--- a/project/static/css/app_global.css
+++ b/project/static/css/app_global.css
@@ -122,7 +122,10 @@ tr.top-text, tr.top-text th {
     color: #b7b7b6;
 }
 
-.table-hover tbody tr:hover {
+.table-hover tbody tr:hover,
+.table-hover tbody td._weekend:hover,
+.table-hover tbody tr._weekend:hover td,
+.table-hover tbody tr._current_day:hover td {
     background: #f9f6cf;
 }
 
@@ -164,4 +167,12 @@ tr.top-text, tr.top-text th {
 .row-spacer {
     height: .5rem;
     background-color:#a5a4a4;
+}
+
+tr._weekend td, td._weekend {
+    background-color:rgb(202, 235, 204);
+}
+
+._current_day, tr._current_day._weekend > td{
+    background-color:#ffc107!important;
 }
