--- a/project/plans/templates/plans/includes/copy_plans_form.html
+++ b/project/plans/templates/plans/includes/copy_plans_form.html
@@ -1,2 +1,78 @@
-{% load form %}
-{% generic_form title='Kopijuoti planus' update_container='not_set' %}
+{% load static %}{% load crispy_forms_tags %}{% load form_field %}
+<form method="post" novalidate id="js-form" class="js-form" action="{{ url }}" data-action="{{ action }}" autocomplete="off" tabindex="-1">
+    {% csrf_token %}
+    <script type="text/javascript" src="{% static 'js/moment-with-locales-2.9.0.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'bootstrap_datepicker/js/bootstrap-datetimepicker-4.17.47.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'bootstrap_datepicker_plus/js/datepicker-widget.js' %}"></script>
+    <div class="modal-header">
+        <h5 class="modal-title">{{ title }}</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        {% if form.non_field_errors %}
+        {% for error in form.non_field_errors %}
+        <div class="alert alert-danger">
+            <strong>{{ error|escape }}</strong>
+        </div>
+        {% endfor %}
+        {% endif %}
+
+        <div class="form-group row">
+            <label class="col-sm-3 col-form-label">Kopijuoti iš</label>
+            <div class="col-sm-9">{{ form.year_from|as_crispy_field }}</div>
+        </div>
+        <div class="form-group row">
+            <label class="col-sm-3 col-form-label">Kopijuoti į</label>
+            <div class="col-sm-9">{{ form.year_to|as_crispy_field }}</div>
+        </div>
+
+        <fieldset class="form-group">
+            <div class="row">
+                <legend class="col-form-label col-sm-3 pt-0">Planai</legend>
+                <div class="col-sm-9">
+                    <div class="form-check">
+                            {% field form form.income 'form-check-input' %}
+                            <label class="form-check-label" for="id_income">Pajamų planus</label>
+                    </div>
+                    <div class="form-check">
+                            {% field form form.expense 'form-check-input' %}
+                            <label class="form-check-label" for="id_income">Išlaidų planus</label>
+                    </div>
+                    <div class="form-check">
+                            {% field form form.saving 'form-check-input' %}
+                            <label class="form-check-label" for="id_income">Taupymo planus</label>
+                    </div>
+                    <div class="form-check">
+                            {% field form form.day 'form-check-input' %}
+                            <label class="form-check-label" for="id_income">Dienos planus</label>
+                    </div>
+                    <div class="form-check">
+                            {% field form form.necessary 'form-check-input' %}
+                            <label class="form-check-label" for="id_income">Papildomų būtinų išlaidų planus</label>
+                    </div>
+                </div>
+            </div>
+        </fieldset>
+    </div>
+
+    <div class="modal-footer">
+        <button type="button" class="btn btn-sm btn-primary" id="submit">{{ action|title }}</button>
+        {% if action != 'update' %}<button type="button" class="btn btn-sm btn-primary" id="save_close">Save and Close</button>{% endif %}
+        <button type="button" class="btn btn-sm btn-secondary" data-dismiss="modal">Close</button>
+    </div>
+</form>
+
+<style>
+    .col-form-label {
+        padding-bottom: 0!important;
+        line-height: 1!important;
+    }
+
+    .form-group {
+        margin-bottom: .35rem!important;
+    }
+</style>
+{% include 'core/includes/modal_form_js.html' %}
+
