--- a/project/bookkeeping/templates/bookkeeping/includes/chart_expenses.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/chart_expenses.html
@@ -1,45 +1,85 @@
-<div id="container-for-pie"></div>
+<div id="container-for-expenses"></div>
 <script>
     // Build the chart
-    Highcharts.chart('container-for-pie', {
-        colors: Highcharts.map(Highcharts.getOptions().colors, function (color) {
-            return {
-                radialGradient: {
-                    cx: 0.5,
-                    cy: 0.3,
-                    r: 0.7
-                },
-                stops: [
-                    [0, color],
-                    [1, Highcharts.Color(color).brighten(-0.3).get('rgb')] // darken
-                ]
-            };
-        }),
+    Highcharts.chart('container-for-expenses', {
         chart: {
-            plotBackgroundColor: null,
-            plotBorderWidth: null,
-            plotShadow: false,
-            type: 'pie',
+            type: 'column',
         },
         title: {
             text: ''
         },
-        tooltip: {
-            pointFormat: '<b>{point.percentage:.1f}%</b>'
-        },
-        plotOptions: {
-            pie: {
-                allowPointSelect: true,
-                cursor: 'pointer',
-                dataLabels: {
-                    enabled: true,
-                    format: '<b>{point.name}</b>: {point.percentage:.1f} %',
-                    connectorColor: 'silver'
+        xAxis: {
+            type: 'category',
+            labels: {
+                rotation: -45,
+                style: {
+                    fontSize: '10px',
+                    fontFamily: 'Calibri, Verdana',
                 }
             }
         },
+        yAxis: {
+            title: {
+                text: ''
+            },
+            labels: {
+                formatter: function () {
+                    if (this.value >= 100) return Highcharts.numberFormat(this.value / 1000, 1) + "k";
+                    return Highcharts.numberFormat(this.value, 0);
+                },
+                style: {
+                    fontSize: '10px',
+                    fontFamily: 'Calibri, Verdana',
+                }
+            }
+        },
+        legend: {
+            enabled: false
+        },
+        tooltip: {
+            pointFormat: '<b>{point.y:.1f}€</b>'
+        },
+        plotOptions: {
+            column: {
+                colorByPoint: true
+            }
+        },
+        colors: [
+        '#6994c7',
+        '#c86967',
+        '#a9c471',
+        '#927aaf',
+        '#64b6cc',
+        '#f5a35f',
+        '#577aa3',
+        '#874746',
+        '#72854a',
+        '#417a8a',
+        '#ba6926',
+        '#81a3cc',
+        '#ce8280',
+        '#b4ca87',
+        '#a08db8',
+        '#f3ba8a',
+        '#c7d7a5',
+        '#8dc7d6',
+        ],
         series: [{
-            data: {{ pie|safe }}
+            data: {{ pie|safe }},
+            dataLabels: {
+                enabled: true,
+                rotation: -90,
+                color: '#000',
+                align: 'right',
+                format: '{point.y:.0f}', // one decimal
+                y: 5,
+                style: {
+                    fontSize: '10px',
+                    fontWeight: 'bold',
+                    fontFamily: 'Verdana, sans-serif',
+                    textOutline: false
+                }
+            }
         }]
     });
 
