chart_expenses tuning

--- a/project/bookkeeping/templates/bookkeeping/includes/chart_expenses.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/chart_expenses.html
@@ -9,6 +9,8 @@
             text: ''
         },
         xAxis: {
+            lineColor: '#000',
+            lineWidth: 2,
             type: 'category',
             labels: {
                 rotation: -45,
