chart drinks consumnsion tuning

--- a/project/drinks/templates/drinks/includes/chart_consumsion_per_month.html
+++ b/project/drinks/templates/drinks/includes/chart_consumsion_per_month.html
@@ -18,6 +18,8 @@
             borderWidth: 1,
         },
         xAxis: {
+            min: 0.4,
+            max: 10.8,
             lineColor: '#000',
             lineWidth: 2,
             gridLineWidth: 1,
