--- a/project/bookkeeping/templates/bookkeeping/detailed.html
+++ b/project/bookkeeping/templates/bookkeeping/detailed.html
@@ -1,46 +1,11 @@
 {% extends 'base.html' %}
-{% load table_cell %}{% load get_item %}
-
+{% load detailed_table %}
 {% block head %}{% endblock head %}
 
 {% block content %}
 <div class="row mt-2">
     <div class="col-lg-12">
-        <table class="table table-striped table-hover stats">
-            <thead class="thead-light">
-                <tr class="top">
-                    <th>Pajamos</th>
-                    <th class="text-right" width="7.5%">Sausis</th>
-                    <th class="text-right" width="7.5%">Vasaris</th>
-                    <th class="text-right" width="7.5%">Kovas</th>
-                    <th class="text-right" width="7.5%">Balandis</th>
-                    <th class="text-right" width="7.5%">Gegužė</th>
-                    <th class="text-right" width="7.5%">Birželis</th>
-                    <th class="text-right" width="7.5%">Liepa</th>
-                    <th class="text-right" width="7.5%">Rugpjūtis</th>
-                    <th class="text-right" width="7.5%">Rugsėjis</th>
-                    <th class="text-right" width="7.5%">Spalis</th>
-                    <th class="text-right" width="7.5%">Lapkritis</th>
-                    <th class="text-right" width="7.5%">Gruodis</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% regroup incomes by title as title_list %}
-                {% for title in title_list %}
-                <tr>
-                    <td>{{ title.grouper }}</td>
-                    {% for i in months %}{% with title.list|get_sum:i as sum %}{% cell sum %}{% endwith %}</td>{% endfor %}
-                </tr>
-                {% endfor %}
-            </tbody>
-            <tfoot>
-                <tr>
-                    <td>Viso</td>
-                    {% for i in months %}{% with incomes_totals|get_sum:i as sum %}{% cell sum %}{% endwith %}</td>{% endfor %}
-                </tr>
-            </tfoot>
-        </table>
-
+        {% detailed_table 'Pajamos' incomes incomes_total %}
     </div>
 </div>
 {% endblock content %}
