sum_detailed -> sum_rows_detailed

--- a/project/bookkeeping/templates/bookkeeping/detailed.html
+++ b/project/bookkeeping/templates/bookkeeping/detailed.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="row mt-2">
     <div class="col-lg-12">
-        {% detailed_table 'Pajamos' incomes incomes_total %}
+        {% detailed_table 'Pajamos' incomes incomes_total_row %}
     </div>
 </div>
 {% endblock content %}
