--- a/project/bookkeeping/templates/bookkeeping/includes/detailed_table.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/detailed_table.html
@@ -29,7 +29,7 @@
     <tfoot>
         <tr>
             <td>Viso</td>
-            {% for i in months %}{% with total|get_sum:i as sum %}{% cell sum %}{% endwith %}</td>{% endfor %}
+            {% for i in months %}{% with total_row|get_sum:i as sum %}{% cell sum %}{% endwith %}</td>{% endfor %}
         </tr>
     </tfoot>
 </table>
