--- a/project/bookkeeping/templates/bookkeeping/detailed.html
+++ b/project/bookkeeping/templates/bookkeeping/detailed.html
@@ -8,5 +8,11 @@
         {% detailed_table 'Pajamos' incomes incomes_total_row incomes_total_col incomes_total %}
     </div>
 </div>
+
+<div class="row mt-2">
+    <div class="col-lg-12">
+        {% detailed_table 'Taupymas' savings savings_total_row savings_total_col savings_total %}
+    </div>
+</div>
 {% endblock content %}
 
