--- a/project/bookkeeping/templates/bookkeeping/detailed.html
+++ b/project/bookkeeping/templates/bookkeeping/detailed.html
@@ -14,5 +14,13 @@
         {% detailed_table 'Taupymas' savings savings_total_row savings_total_col savings_total %}
     </div>
 </div>
+
+{% for e in expenses %}
+<div class="row mt-2">
+    <div class="col-lg-12">
+        {% detailed_table e.name e.data e.total_row e.total_col e.total %}
+    </div>
+</div>
+{% endfor %}
 {% endblock content %}
 
