--- a/project/bookkeeping/templates/bookkeeping/detailed.html
+++ b/project/bookkeeping/templates/bookkeeping/detailed.html
@@ -3,19 +3,8 @@
 {% block head %}{% endblock head %}
 
 {% block content %}
-<div class="row mt-2">
-    <div class="col-lg-12">
-        {% detailed_table 'Pajamos' incomes incomes_total_row incomes_total_col incomes_total %}
-    </div>
-</div>
 
-<div class="row mt-2">
-    <div class="col-lg-12">
-        {% detailed_table 'Taupymas' savings savings_total_row savings_total_col savings_total %}
-    </div>
-</div>
-
-{% for e in expenses %}
+{% for e in data %}
 <div class="row mt-2">
     <div class="col-lg-12">
         {% detailed_table e.name e.data e.total_row e.total_col e.total %}
@@ -23,4 +12,3 @@
 </div>
 {% endfor %}
 {% endblock content %}
-
