--- a/project/bookkeeping/templates/bookkeeping/includes/savings_worth_list.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/savings_worth_list.html
@@ -2,6 +2,6 @@
 
 <div class="row">
     <div class="col-lg-12">
-        {% savings_worth_table fund fund_total_row label='Fondai' %}
+        {% savings_worth_table fund fund_total_row label='Fondai' percentage_from_incomes=savings_percentage %}
     </div>
 </div>
