--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -11,9 +11,7 @@
 <div class="row my-2 border-bottom border-primary">
     <div class="col-lg-4 pr-3">{{ year_balance }}</div>
 
-    <div class="col-lg-8 pl-3">
-        {% include 'bookkeeping/includes/months_expense_type.html' %}
-    </div>
+    <div class="col-lg-8 pl-3">{{ year_expenses }}</div>
 </div>
 
 <div class="row my-2 border-bottom border-primary">
