--- a/project/bookkeeping/templates/bookkeeping/includes/year_expenses.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/year_expenses.html
@@ -3,20 +3,20 @@
 <table class="table table-striped table-hover table-sm stats">
     <thead class="thead-light">
         <tr class="top">
-            <th colspan="{{ expense_types|length|add:1 }}"><h1>Išlaidų statistika</h1></th>
+            <th colspan="{{ categories|length|add:1 }}"><h1>Išlaidų statistika</h1></th>
             <th class="bl top"></th>
         </tr>
         <tr>
             <th width="80rem" class="text-left">{{ year|title }}</th>
-            {% for cat in expense_types %}<th>{{ cat }}</th>{% endfor %}
+            {% for cat in categories %}<th>{{ cat }}</th>{% endfor %}
             <th class="bl">Viso</th>
         </tr>
     </thead>
     <tbody>
-        {% for item in expenses  %}
+        {% for item in data  %}
         <tr>
             <td class="text-left">{{ item.date|date:"F"|title }}</td>
-            {% for cat in expense_types %}
+            {% for cat in categories %}
             {% cell item|get_item:cat %}
             {% endfor %}
             {% cell item.total css_class="bl" %}
@@ -26,13 +26,13 @@
     <tfoot>
         <tr>
             <th class="text-left">Avg</th>
-            {% for cat in expense_types %}{% cell expenses_average|get_item:cat tag='th' %}{% endfor %}
-            {% cell expenses_average.total tag='th' css_class="bl" %}
+            {% for cat in categories %}{% cell avg_row|get_item:cat tag='th' %}{% endfor %}
+            {% cell avg_row.total tag='th' css_class="bl" %}
         </tr>
         <tr class="total">
             <th class="text-left">Viso</th>
-            {% for cat in expense_types %}{% cell expenses_total_row|get_item:cat tag='th' %}{% endfor %}
-            {% cell expenses_total_row.total tag='th' css_class="bl" %}
+            {% for cat in categories %}{% cell total_row|get_item:cat tag='th' %}{% endfor %}
+            {% cell total_row.total tag='th' css_class="bl" %}
         </tr>
     </tfoot>
 </table>
