--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -44,23 +44,7 @@
 <div class="row mt-2">
     <div id="accounts_worth" class="col-md-7 pr-2">{{ accounts }}</div>
     <div class="col-md-3 pl-2">
-        <table class="table table-striped table-hover table-sm stats">
-            <thead>
-                <tr class="top">
-                    <th class="text-right">Metų pradžioje</th>
-                    <th class="text-right">Metų pabaigoje</th>
-                    <th class="text-right">Metų balansas</th>
-                </tr>
-            </thead>
-            <tfoot>
-                <tr>
-                    {% cell amount_start tag='th' %}
-                    {% cell months_amount_end tag='th' %}
-                    {% cell amount_balance tag='th' highlight_value=True %}
-                </tr>
-            </tfoot>
-        </table>
-
+        <div>{{ year_balance_short }}</div>
         <div id="no_incomes">{{ no_incomes }}</div>
     </div>
 
