style and script moved into no_income template

--- a/project/bookkeeping/templates/bookkeeping/includes/no_incomes.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/no_incomes.html
@@ -21,3 +21,14 @@
     <b>F</b> - Fondai<br />
     <b>P</b> - Pensijų fondai
 </p>
+
+<style>
+    .tooltip.show p {
+        text-align: left;
+    }
+</style>
+<script>
+    $(document).ready(function () {
+        $('[data-toggle="tooltip"]').tooltip();
+    });
+</script>
