method render_chart_expenses in IndexHelper class

--- a/project/bookkeeping/templates/bookkeeping/includes/chart_expenses.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/chart_expenses.html
@@ -73,7 +73,7 @@
             '#8dc7d6',
         ],
         series: [{
-            data: {{ pie|safe }},
+            data: {{ data|safe }},
             dataLabels: {
                 enabled: true,
                 rotation: -90,
