--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -15,9 +15,7 @@
 </div>
 
 <div class="row my-2 border-bottom border-primary">
-    <div class="col-lg-5">
-        {% include 'bookkeeping/includes/chart_expenses.html' %}
-    </div>
+    <div class="col-lg-5">{{ chart_expenses }}</div>
 
     <div class="col-lg-7">
         {% include 'bookkeeping/includes/chart_balance.html' %}
