chart_balance method in IndexHelper class

--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -16,10 +16,7 @@
 
 <div class="row my-2 border-bottom border-primary">
     <div class="col-lg-5">{{ chart_expenses }}</div>
-
-    <div class="col-lg-7">
-        {% include 'bookkeeping/includes/chart_balance.html' %}
-    </div>
+    <div class="col-lg-7">{{ chart_balance }}</div>
 </div>
 
 <div class="row mt-4 mb-3">
