--- a/project/bookkeeping/templates/bookkeeping/includes/info_table.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/info_table.html
@@ -1,7 +1,7 @@
 {% load table_cell %}
 <table class="table table-striped table-hover table-sm stats">
     <thead>
-        <tr class="top"><th class="text-right">Pinigai</th></tr>
+        <tr class="top"><th class="text-right">{{ title }}</th></tr>
     </thead>
     <tfoot>
         <tr>{% cell data tag='th' %}</tr>
