--- a/project/bookkeeping/templates/bookkeeping/includes/worth_table.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/worth_table.html
@@ -3,7 +3,7 @@
 <table class="table table-striped table-hover stats">
     <thead class="thead-light">
         <tr class="top">
-            <th colspan="4" rowspan="2" style="border-right: 0!important;">{% if label %}<h1>{{ label }}</h1>{% endif %}</th>
+            <th colspan="4" rowspan="2" style="border-right: 0!important;">{{ title }}</h1></th>
             <th colspan="3" rowspan="2" class="br text-right" style="border-left: 0!important;">{% if percentage_from_incomes %} Nuo pajamų: {{ percentage_from_incomes|floatformat:1 }}%{% endif %}</th>
             <th colspan="4" class="text-center">Pelnas/Nuostolis</th>
         </tr>
