--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -29,7 +29,7 @@
 
 <div class="row my-2">
     <div class="col-lg-8">
-        {% with request.user.profile.month as month %}
+        {% with request.user.month as month %}
         {% for m in buttons %}
         {% with m|date:'n' as m_num %}
         <a href="{% url 'core:set_month' m_num 'bookkeeping:month' %}" class="btn btn-sm mr-1 px-3 {% if month|slugify == m_num %}btn-primary{% else %}btn-secondary{% endif %}">{{ m|date:'F'|title }}</a>
