--- a/project/expenses/templates/expenses/includes/expenses_list.html
+++ b/project/expenses/templates/expenses/includes/expenses_list.html
@@ -26,7 +26,7 @@
         </tr>
         {% empty %}
         <tr class="table-warning text-center">
-            <td colspan="7" class="py-2"><b>{{ request.user.profile.year|title }}</b> metais išlaidų nėra.</td>
+            <td colspan="7" class="py-2"><b>{{ request.user.year|title }}</b> metais išlaidų nėra.</td>
         </tr>
         {% endfor %}
     </tbody>
