--- a/project/plans/templates/plans/includes/days_plan_list.html
+++ b/project/plans/templates/plans/includes/days_plan_list.html
@@ -1,2 +1,2 @@
 {% load generic_list %}
-{% generic_list items 'plans:days_plan_update' request.user.profile.year 'Dienai' %}
+{% generic_list items 'plans:days_plan_update' request.user.year 'Dienai' %}
