--- a/project/plans/templates/plans/includes/necessarys_plan_list.html
+++ b/project/plans/templates/plans/includes/necessarys_plan_list.html
@@ -1,2 +1,2 @@
 {% load generic_list %}
-{% generic_list items 'plans:necessarys_plan_update' request.user.profile.year 'title' %}
+{% generic_list items 'plans:necessarys_plan_update' request.user.year 'title' %}
