changed references from auths -> users

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -81,7 +81,7 @@
               <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
                 aria-expanded="false">{{ user.username }}</a>
               <div class="dropdown-menu dropdown-menu-right">
-                <a class="dropdown-item btn-sm pl-2" href="{% url 'auths:logout' %}">Log out</a>
+                <a class="dropdown-item btn-sm pl-2" href="{% url 'users:logout' %}">Log out</a>
               </div>
             </li>
           </ul>
