--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -8,21 +8,16 @@
 {% block content %}
 
 <div class="row my-2">
-    <div class="col-md-6 mr-0 pr-0 table-responsive" id="month_table">
+    <div class="col-sm-12 col-md-8 col-lg-7 mr-0 pr-0 table-responsive" id="month_table">
         {{ month_table }}
     </div>
-    <div class="col-md-6">
+    <div class="col-sm-12 col-md-4 col-lg-5">
         <div class="row">
-            <div class="col-lg-3 mx-0 px-2" id="spending">{{ spending }}</div>
-            <div class="col-lg-9 pl-0">
-                <div class="row">
-                    <div style="display: none;" id='chart_expenses' class="col-lg-12">{{ chart_expenses }}</div>
-                    <div id='chart_targets' class="col-lg-12">{{ chart_targets }}</div>
-                </div>
-                <div class="row mt-2">
-                    <div class="col-lg-12" id="info">{{ info }}</div>
-                </div>
-            </div>
+            <div style="display: none;" id='chart_expenses' class="col">{{ chart_expenses }}</div>
+            <div id='chart_targets' class="col-lg-12">{{ chart_targets }}</div>
+        </div>
+        <div class="row mt-2">
+            <div class="col" id="info">{{ info }}</div>
         </div>
     </div>
 </div>
@@ -75,9 +70,6 @@
             success: function (data) {
                 var month_table = $(data).filter('#month_table');
                 $('#month_table').html(month_table);
-
-                var spending = $(data).filter('#spending');
-                $('#spending').html(spending);
 
                 var info = $(data).filter('#info');
                 $('#info').html(info);
