--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -8,10 +8,10 @@
 {% block content %}
 
 <div class="row my-2">
-    <div class="col-sm-12 col-md-8 col-lg-7 mr-0 pr-0 table-responsive" id="month_table">
+    <div class="col-6 col-sm-12 col-md-8 col-lg-7 mr-0 pr-0 table-responsive" id="month_table">
         {{ month_table }}
     </div>
-    <div class="col-sm-12 col-md-4 col-lg-5">
+    <div class="col-6 col-sm-12 col-md-4 col-lg-5">
         <div class="row">
             <div style="display: none;" id='chart_expenses' class="col">{{ chart_expenses }}</div>
             <div id='chart_targets' class="col-lg-12">{{ chart_targets }}</div>
