--- a/project/bookkeeping/templates/bookkeeping/month.html
+++ b/project/bookkeeping/templates/bookkeeping/month.html
@@ -8,10 +8,10 @@
 {% block content %}
 
 <div class="row my-2">
-    <div class="col-12 col-lg-8 mr-0 pr-0 table-responsive" id="month_table">
+    <div class="col-12 col-md-7 mr-0 pr-0 table-responsive" id="month_table">
         {{ month_table }}
     </div>
-    <div class="col-12 col-lg-4">
+    <div class="col-12 col-md-5">
         <div class="row">
             <div style="display: none;" id='chart_expenses' class="col">{{ chart_expenses }}</div>
             <div id='chart_targets' class="col-lg-12">{{ chart_targets }}</div>
@@ -23,14 +23,14 @@
 </div>
 
 <div class="row my-2">
-    <div class="col-12 col-lg-8">
+    <div class="col-12 col-md-7">
         {% with request.user.month as month %}
         {% for m in buttons %}
         {% with m|date:'n' as m_num %}
         <a href="{% url 'core:set_month' m_num 'bookkeeping:month' %}" class="btn btn-sm mr-1 px-3 {% if month|slugify == m_num %}btn-primary{% else %}btn-secondary{% endif %}">{{ m|date:'F'|title }}</a>
         {% endwith %}{% endfor %}{% endwith %}
     </div>
-    <div class="col-12 col-lg-4 text-right">
+    <div class="col-12 col-md-5 text-right">
         {% url 'expenses:expenses_new' as url_expenses_new %}
         <button type="button" class="btn btn-sm btn-outline-success js-create mx-1" data-url="{{ url_expenses_new }}"><i class="fas fa-plus"></i> Išlaidas</button>
         {% url 'incomes:incomes_new' as url_incomes_new %}
