savings percent from incomes don't disappear anymore

--- a/project/bookkeeping/templates/bookkeeping/includes/reload_index.html
+++ b/project/bookkeeping/templates/bookkeeping/includes/reload_index.html
@@ -1,3 +1,4 @@
 <div id="no_incomes">{{ no_incomes }}</div>
 <div id="money">{{ money }}</div>
 <div id="wealth">{{ wealth }}</div>
+<div id="saving_worth">{{ savings }}</div>
