--- a/project/bookkeeping/templates/bookkeeping/index.html
+++ b/project/bookkeeping/templates/bookkeeping/index.html
@@ -87,6 +87,9 @@
 
                 var wealth = $(data).filter('#wealth');
                 $('#wealth').html(wealth);
+
+                var savings = $(data).filter('#saving_worth');
+                $('#saving_worth').html(savings);
             }
         });
     });
